# Butterscotch-Loader-Wii

./: CMakeLists.txt  CMakePresets.json  CREDITS.txt  README.md  TODO.md
cmake/: embed_directory.cmake  wii.cmake
data/lang/: en.json  jp.json
src/: common.h  data_win.c  data_win.h  runner.c  runner.h  utils.h  vm_builtins.c
src/image/: image_decoder.c
src/wii/: game.c  game.h  grr_renderer.c  grr_renderer.h  launcher.c  launcher.h  main.c  stb_impl.c  wii_audio_system.c  wii_audio_system.h  wii_embedded_data.c  wii_embedded_data.h  wii_file_system.c  wii_file_system.h  wii_log.c  wii_log.h  wii_utils.h
